<resources>
    <string name="app_name">LootCrate</string>
    <string name="login">Login</string>
    <string name="loot_crate_logo">Loot Crate Logo</string>
    <string name="username">Username:</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="welcome_to_loot_crate_please_sign_in">Welcome to Loot Crate\nPlease Sign in.</string>
    <string name="sign_up">Sign Up</string>
    <string name="loot_crate">Loot Crate!</string>
    <string name="welcome_to_loot_crate_sign_up_page_please_enter_your_details">Welcome to Loot Crate Sign Up Page, Please Enter Your Details!</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="preference_file_key">jnPreferenceFileNameLootCrate</string>
    <string name="preference_userId_key">jnPreferenceUserIdKeyLootCrate</string>
    <string name="back">Back</string>
    <string name="your_liked_games">Your Liked Games</string>
    <string name="gameimage">gameImage</string>
    <string name="remove_game">Remove Game</string>
    <string name="your_disliked_games">Your Disliked Games</string>
    <string name="loot_crate_2">Loot Crate</string>
</resources>