<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/welcome_to_loot_crate_please_sign_in"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lootCrateThumbnailImageView"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:contentDescription="@string/loot_crate_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="155dp" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:paddingStart="28dp"
        android:paddingTop="10dp"
        android:paddingEnd="25dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/lootCrateThumbnailImageView" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameTextView"
        app:layout_constraintStart_toEndOf="@id/usernameTextView"
        app:layout_constraintTop_toBottomOf="@id/lootCrateThumbnailImageView" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:paddingStart="28dp"
        android:paddingTop="10dp"
        android:paddingEnd="25dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordTextView"
        app:layout_constraintStart_toEndOf="@id/passwordTextView"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>