<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:paddingStart="28dp"
        android:paddingTop="10dp"
        android:paddingEnd="25dp"
        android:text="@string/welcome_to_loot_crate_sign_up_page_please_enter_your_details"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordTextView"
        app:layout_constraintStart_toEndOf="@id/passwordTextView"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:hint="Re-enter your password"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/confirmPasswordTextView"
        app:layout_constraintStart_toEndOf="@+id/confirmPasswordTextView"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:paddingStart="28dp"
        android:paddingTop="10dp"
        android:paddingEnd="25dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

    <TextView
        android:id="@+id/confirmPasswordTextView"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:paddingStart="28dp"
        android:paddingTop="10dp"
        android:paddingEnd="25dp"
        android:text="@string/confirm_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameTextView"
        app:layout_constraintStart_toEndOf="@id/usernameTextView" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:paddingStart="28dp"
        android:paddingTop="10dp"
        android:paddingEnd="25dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="Complete Sign Up"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>





